--- a/package.json
+++ b/package.json
@@ -8,26 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/cache": "^11.7.1",
-    "@emotion/react": "^11.7.1",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.6",
-    "bootstrap": "^5.1.3",
-    "clsx": "^1.1.1",
-    "date-fns": "^2.28.0",
-    "framer-motion": "^5.5.5",
-    "next": "^13.1.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.0.4",
-    "react-icons": "^4.3.1",
-    "react-multi-carousel": "^2.6.5",
-    "react-scroll": "^1.8.4",
-    "styled-components": "^5.3.3"
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
+    "bootstrap": "^5.3.8",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
+    "next": "^15.5.2",
+    "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
+    "react-icons": "^5.5.0",
+    "react-multi-carousel": "^2.8.6",
+    "react-scroll": "^1.9.3",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.3"
+    "eslint": "^9.35.0",
+    "eslint-config-next": "^15.5.2"
   }
 }
