--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
@@ -27,7 +27,8 @@
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
-    "eslint": "^9.35.0",
-    "eslint-config-next": "^15.5.2"
+    "@eslint/eslintrc": "^3.3.1",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "^15.5.4"
   }
 }
