--- a/.gitignore
+++ b/.gitignore
@@ -25,15 +25,12 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
+.env
 
 # vercel
 .vercel
-package-lock.json
 
-# Temp files
-tmp
-*.tmp
+# typescript
+*.tsbuildinfo
+next-env.d.ts
