--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-icons": "^5.5.0",
-    "react-multi-carousel": "^2.8.6",
-    "react-scroll": "^1.9.3",
-    "styled-components": "^6.1.19"
+    "react-multi-carousel": "^2.8.5",
+    "react-scroll": "^1.9.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
