--- a/package.json
+++ b/package.json
@@ -17,17 +17,14 @@
     "@mui/material": "^7.3.2",
     "bootstrap": "^5.3.8",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "next": "^16.0.4",
     "react": "^19.1.1",
-    "react-bootstrap": "^2.10.10",
-    "react-icons": "^5.5.0",
-    "react-multi-carousel": "^2.8.5",
-    "react-scroll": "^1.9.3"
+    "react-bootstrap": "^2.10.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@types/estree": "^1.0.6",
     "eslint": "^9.37.0",
     "eslint-config-next": "^15.5.4",
     "eslint-config-prettier": "^9.1.0",
