Add path mapping for data directory

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,8 @@
       "@components/*": ["components/*"],
       "@scripts/*": ["lib/*"],
       "@styles/*": ["styles/*"],
-      "@layouts/*": ["components/layouts/*"]
+      "@layouts/*": ["components/layouts/*"],
+      "@data/*": ["data/*"]
     }
   }
 }
